--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,3 +6,11 @@ on:
 jobs:
   build:
     uses: ./.github/workflows/build.yml
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v4
+      - uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist/browser
