ci: deploy to gh-pages if branch is main

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,4 +16,5 @@ jobs:
       - run: npm run build
       - uses: actions/upload-artifact@v4
         with:
+          name: artifact
           path: dist
